<resources>
    <string name="app_name">PopularMovies</string>
    <string name="movie_poster">moviePoster</string>
    <string name="error_message">failed to get results,please try again</string>
    <string name="Sort_ByPopular">Most popular</string>
    <string name="Sort_ByTopRated">Top Rated</string>
    <string name="movie_details_title">Movie details</string>
    <string name="trailer_tv">Trailers:</string>
    <string name="movie_cover">movie cover photo</string>
    <string name="trailer">Trailer</string>
    <string name="THE_MOVIE_DB_API_TOKEN">074d499d5f8f7cfc23a16f8d4936f80c</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="menu_item_top_rated">Top rated movies</string>
    <string name="menu_item_popular_movies">Popular movies</string>
    <string name="menu_item_settings">Settings</string>
    <string name="reviews_tv">Reviews:</string>
    <string name="add_favourite">Add to favourites:</string>
    <string name="menu_item_favourites_movies">Favourites</string>
    <string name="Favourites_title">Favourites</string>
    <string name="favourite_img">movie poster</string>
    <string name="delete">Delete</string>
    <string name="overview_label">Overview</string>
    <string name="movie_year">released year</string>
    <string name="movie_rate">movie rate</string>
    <string name="trailer_error_tv">No internet connection</string>
    <string name="reviews_error_tv">No internet Connection</string>
</resources>
