<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="com.example.android.popularmovies.view.MovieDetails"
    android:padding="5dp"
    android:background="@color/colorPrimary">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:id="@+id/constraintlayout"
    >

    <ImageView
        android:id="@+id/img_cover"
        android:layout_width="match_parent"
        android:layout_height="145dp"
        android:contentDescription="@string/movie_cover"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/ic_launcher_background" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="2dp">

        <ImageView
            android:id="@+id/img_pos"
            android:layout_width="143dp"
            android:layout_height="213dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/movie_poster"
            android:scaleType="fitXY"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/img_cover"
            app:srcCompat="@mipmap/ic_launcher" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top"
                android:layout_marginTop="16dp"
                android:textSize="25sp"
               android:textColor="@color/main_color_text" />

            <TextView
                android:id="@+id/tv_year"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="20sp"
                android:textColor="@color/main_color_text"
                />

            <TextView
                android:id="@+id/tv_rate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@color/main_color_text"/>
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/add_favourite"
                 android:layout_marginTop="7dp"
                 android:layout_marginEnd="4dp"
                 android:textColor="@color/colorAccent"/>

             <ImageButton
                 android:id="@+id/favourite_btn"
                 android:layout_width="35dp"
                 android:layout_height="35dp"
                 android:background="@color/colorPrimary"
                 android:onClick="addToFavourites"
                 android:scaleType="fitCenter"
                 android:src="@drawable/fav" />
         </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"
        android:id="@+id/overview_top_view"
        app:layout_constraintBottom_toBottomOf="@id/linearLayout2"
        app:layout_constraintBottom_toTopOf="@id/tv_overview"
        />

    <TextView
        android:id="@+id/tv_overview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="15dp"
        android:layout_marginBottom="15dp"
        android:textColor="@color/main_color_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        />

       <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"
           android:layout_marginTop="20dp"
           android:id="@+id/overview_down_view"
        app:layout_constraintBottom_toBottomOf="@id/tv_overview"
           app:layout_constraintBottom_toTopOf="@id/linearlayout4"
        />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="440dp"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:id="@+id/linearlayout4"
        app:layout_constraintBottom_toBottomOf="@id/overview_down_view"
        app:layout_constraintBottom_toTopOf="@+id/constraintlayout"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/colorAccent"
            android:id="@+id/trailer"
            android:text="@string/trailer_tv"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/trailers_rv"
            />

     <android.support.v7.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/trailers_rv"
         android:visibility="visible" >

     </android.support.v7.widget.RecyclerView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/trailer_error_tv"
            android:visibility="invisible"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent"
        android:layout_marginTop="20dp"
        android:id="@+id/trailers_down_view"
        app:layout_constraintBottom_toBottomOf="@id/tv_overview"
        app:layout_constraintBottom_toTopOf="@id/linearlayout4"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="440dp"
        android:layout_margin="5dp"
        android:orientation="vertical"
        android:id="@+id/linearlayout5"
        app:layout_constraintBottom_toBottomOf="@id/overview_down_view"
        app:layout_constraintBottom_toTopOf="@+id/constraintlayout"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:textColor="@color/colorAccent"
            android:id="@+id/reviews"
            android:text="@string/reviews_tv"
            android:textSize="24sp"
            android:layout_marginBottom="2dp"
            app:layout_constraintBottom_toTopOf="@+id/trailers_rv"
            />

        <android.support.v7.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/reviews_rv"
            android:visibility="visible" >

        </android.support.v7.widget.RecyclerView>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/reviews_error_tv"
            android:visibility="invisible"/>

    </LinearLayout>
</LinearLayout>
</ScrollView>